deploy/k3s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: utopia
  labels:
    app: utopia
spec:
  type: ClusterIP
  selector:
    app: utopia
  ports:
    - name: http
      port: 1516
      targetPort: http
