deploy/k3s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: utopia
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  rules:
    - host: utopia.galaxies.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: utopia
                port:
                  number: 1516
